fix: fixed some deprecations